Fix vertical alignment in team achievements component by using flexbox

--- a/src/main/webapp/app/teams/teams-achievements.scss
+++ b/src/main/webapp/app/teams/teams-achievements.scss
@@ -27,7 +27,6 @@
                 }
             }
             .achievement-progress {
-                float: right;
                 svg {
                     width: 3vh;
                     height: 3vh;
